fix(ABTest/OptimizelyXExperiment): missing react-ab-testing-toggle dependency

--- a/components/ABTest/OptimizelyXExperiment/package.json
+++ b/components/ABTest/OptimizelyXExperiment/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@schibstedspain/react-ab-testing-toggle": "1.2",
     "@schibstedspain/suistudio-fatigue-deps": "github:SUI-Components/suistudio-fatigue-deps"
   }
 }
