--- a/components/ABTest/OptimizelyXExperiment/package.json
+++ b/components/ABTest/OptimizelyXExperiment/package.json
@@ -7,15 +7,12 @@
     "build": "rm -Rf ./lib && mkdir -p ./lib && npm run babel && npm run sass",
     "babel": "../../../node_modules/.bin/babel --presets schibsted-spain ./src --out-dir ./lib",
     "sass": "../../../node_modules/.bin/cpx \"./src/**/*.scss\" ./lib",
-    "preversion": "echo \"preversion\"",
-    "version": "npm run build",
-    "postversion": "git add ${PWD} && git commit -m \"release(ABTest/OptimizelyXExperiment): v$(node -p -e \"require('./package.json').version\")\" && git push origin master && npm publish"
+    "version": "npm run build"
   },
   "keywords": [],
   "author": "David Almeida <davidbarna@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "@schibstedspain/react-ab-testing-toggle": "1.2",
-    "@schibstedspain/suistudio-fatigue-deps": "github:SUI-Components/suistudio-fatigue-deps"
+    "@schibstedspain/react-ab-testing-toggle": "1.2"
   }
 }
