--- a/components/ABTest/OptimizelyXExperiment/package.json
+++ b/components/ABTest/OptimizelyXExperiment/package.json
@@ -4,9 +4,8 @@
   "description": "<AbTestOptimizelyXExperiment experimentId />",
   "main": "lib/index.js",
   "scripts": {
-    "build": "rm -Rf ./lib && mkdir -p ./lib && npm run babel && npm run sass",
-    "babel": "../../../node_modules/.bin/babel --presets schibsted-spain ./src --out-dir ./lib",
-    "sass": "../../../node_modules/.bin/cpx \"./src/**/*.scss\" ./lib",
+    "build": "rm -Rf ./lib && mkdir -p ./lib && npm run babel",
+    "babel": "../../../node_modules/.bin/babel --presets sui ./src --out-dir ./lib",
     "version": "npm run build"
   },
   "keywords": [],
