--- a/components/ABTest/Toggle/package.json
+++ b/components/ABTest/Toggle/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "build": "rm -Rf ./lib && mkdir -p ./lib && npm run babel && npm run sass",
-    "babel": "../../../node_modules/.bin/babel --presets schibsted-spain ./src --out-dir ./lib",
-    "sass": "../../../node_modules/.bin/cpx \"./src/**/*.scss\" ./lib",
-    "version": "npm run build"
+    "build": "rm -Rf ./lib && mkdir -p ./lib && npm run babel",
+    "babel": "../../../node_modules/.bin/babel --presets sui ./src --out-dir ./lib"
   },
   "keywords": [],
   "author": "",
